# CppCalculatorV3

./: .gitmodules  CMakeLists.txt  Calculator.cpp  Calculator.h  FileLogger.cpp  FileLogger.h  ILogger.h  MockLogger.h  Parser.cpp  Parser.h  main.cpp  run-valgrind-wsl.sh
.github/workflows/: ci.yml
cmake-wsl/: .gitignore  CMakeCache.txt  CTestTestfile.cmake  Makefile  calculator_v3  cmake_install.cmake  logger-output.txt
cmake-wsl/tests/: .gitignore  CTestTestfile.cmake  Makefile  calculator_tests[1]_include.cmake  cmake_install.cmake
tests/: CMakeLists.txt  test_calculator.cpp  test_file_logger.cpp
